footer alignment fixed

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -174,6 +174,7 @@ table {
 #footer-style a {
   text-decoration: none;
   color: white;
+  align-items: center;
 }
 
 #footer-style a:hover {
